--- a/src/math1a.tex
+++ b/src/math1a.tex
@@ -103,7 +103,7 @@
     \item $4 \leq x^2 + y^2 \leq 25$
   \end{choices}
   \needspace{6\baselineskip}
-  \item 已知 $0.3010 < \log 2 < 0.3011$。下列敘述何者正確？
+  \item 已知 $0.3010 < \log 2 < 0.3011$，試問下列敘述何者正確？
   \begin{choices}{1}
     \item $10^{\log 2} > 1$
     \item $10^{0.3} < 2$
@@ -137,7 +137,7 @@
 \end{enumerate}
 
 \needspace{5\baselineskip}
-\section{混合題}
+\section{非選題}
 \begin{enumerate}[align=left,leftmargin=*,labelsep=.6em,parsep=0ex]
   \item 已知 $\sqrt{2}$ 為無理數。
   \begin{enumerate}[label=(\arabic*),align=left,leftmargin=*,labelsep=.4em]
@@ -145,10 +145,10 @@
     \item 試證明 $\sqrt[4]{2}$ 為無理數。
   \end{enumerate}
   \needspace{6\baselineskip}
-  \item 一實驗需要在培養皿中培養細菌，原先培養皿中共有 $6 \times 10^4$ 個細菌。已知經過 $k$ 日後，細菌數會變為原先的 $c^k$ 倍。
+  \item 考慮一培養細菌之實驗，在實驗開始時培養皿中共有 $6 \times 10^4$ 個細菌。已知每經過 $1$ 日，細菌數會變為前一日的 $c$ 倍，其中 $c$ 為一常數。
   \begin{enumerate}[label=(\arabic*),align=left,leftmargin=*,labelsep=.4em]
-    \item 若經過 8 日後，培養皿中共有 $9.6 \times 10^5$ 個細菌，則 $c$ 之值為何？
-    \item 承 (1)，從開始培養起算，經過幾日後培養皿中的細菌數會達到 $3.84 \times 10^6$？
+    \item 若自實驗開始經過 8 日後，培養皿中共有 $9.6 \times 10^5$ 個細菌，則 $c$ 之值為何？
+    \item 承 (1)，若自實驗開始經過 $k$ 日後，培養皿中共有 $3.84 \times 10^6$ 個細菌，則 $k$ 之值為何？
   \end{enumerate}
 \end{enumerate}
 
@@ -177,7 +177,7 @@
   \item $\biggl(\fraction{1}{2}, 2\sqrt{5}\biggr)$
   \item 18
 \end{enumerate*}
-\section*{混合題}
+\section*{非選題}
 \begin{enumerate}[align=left,leftmargin=*,labelsep=.6em,parsep=0ex]
   \item
   \begin{enumerate}[label=(\arabic*),align=left,leftmargin=*,labelsep=.4em]
