--- a/src/math1a.tex
+++ b/src/math1a.tex
@@ -171,7 +171,7 @@
   \item $(-1,5)$
   \item $322$；$-3\sqrt{5}$
   \item $\fraction{4}{3}$
-  \item $\fraction{1}{9}$
+  \item $-2$
   \item $\biggl(\fraction{1}{2}, 2\sqrt{5}\biggr)$
   \item 18
 \end{enumerate*}
