--- a/src/math3a.tex
+++ b/src/math3a.tex
@@ -69,7 +69,7 @@
 \section{填充題}
 \begin{enumerate}[label=\Alph*.,left=0pt]
   \item 由於 $f(x)$ 是二次多項式，我們可以假設 $f(x)$ 形如 $ax^2 + bx + c$。
-  \item 我們可以利用綜合除法把 $f(x)$ 轉換為 $a(x-5)^4 + b(x-5)^3 + c(x-5)^2 + d(x-5) + 5$ 的形式。
+  \item 我們可以利用綜合除法把 $f(x)$ 轉換為 $a(x-5)^4 + b(x-5)^3 + c(x-5)^2 + d(x-5) + e$ 的形式。
   \item 我們可以假設 $f(x)$ 除以 $x^2 + 2$ 的餘式是 $ax + b$，並觀察此時 $x^2f(x)$ 除以 $x^2 + 2$ 的餘式如何用 $a$、$b$ 表示。
 \end{enumerate}
 
