--- a/src/cal1a.tex
+++ b/src/cal1a.tex
@@ -57,7 +57,7 @@
   \item Evaluate the following limits.
   \begin{enumerate}[label=(\alph*),left=0pt]
     \item $\lim\limits_{x \to 3}\fraction{x^2-9}{x^2+2x-3}$.
-    \item $\lim\limits_{t \to 1} \fraction{t^3-1}{t^4-1}$.
+    \item $\lim\limits_{x \to 1} \fraction{x^3-1}{x^4-1}$.
   \end{enumerate}
   \item Find the derivatives.
   \begin{enumerate}[label=(\alph*),left=0pt]
