--- a/src/stat1a.tex
+++ b/src/stat1a.tex
@@ -15,8 +15,8 @@
 \usepackage{fancyhdr}
 \usepackage{needspace}
 
-%\pretolerance=5000
-%\tolerance=9000
+\pretolerance=5000
+\tolerance=9000
 \emergencystretch=10pt
 
 \pagestyle{fancy}
@@ -55,24 +55,40 @@
 答案位於第 \pageref{answer} 頁。
 \begin{enumerate}[label=\arabic*.,align=left,leftmargin=*,labelsep=.5em]
   \item Assume that binomial distribution applies, the sample size is 4, and the probability of success is 0.8.
-  Find the following probabilities.
   \begin{enumerate}[label=(\alph*),left=0pt,widest=a,topsep=0ex]
-    \item The probability of exactly 2 successes.
-    \item The probability of 3 or more successes.
-  \end{enumerate}
-  \newpage
-  \item Assume that binomial distribution applies, the sample size is 150, and the probability of success is 0.6.
-  \begin{enumerate}[label=(\alph*),left=0pt,widest=a,topsep=0ex]
-    \item Find the expected value of the number of successes.
+    \item Find the probability of exactly 2 successes.
+    \item Find the probability of 3 or more successes.
+    \item Find the expected number of successes.
     \item Find the standard deviation of the number of successes.
   \end{enumerate}
   \newpage
   \item Customers arrive at a checkout counter in a department store according to a Poisson distribution
   at an average of 1 per ten minutes.
-  During a given ten minutes, find the following probabilities.
   \begin{enumerate}[label=(\alph*),left=0pt,widest=a,topsep=0ex]
-    \item The probability that exactly 1 customers arrive.
-    \item The probability that at least 2 customers arrive.
+    \item Find the probability that exactly 1 customer arrive during a given ten minutes.
+    \item Find the probability that at least 2 customers arrive during a given ten minutes.
+    \item Find the expected number of customers arrive during a given ten minutes.
+    \item Find the standard deviation of the number of customers arrive during a given ten minutes.
+  \end{enumerate}
+  \newpage
+  \item The number of typing errors made by a typist has a Poisson distribution with an average of 3 errors per page.
+  \begin{enumerate}[label=(\alph*),left=0pt,widest=a,topsep=0ex]
+    \item Find the probability that no error appears on a given page.
+    \item Find the probability that at least 3 errors appear on a given page.
+    \item Find the expected number of errors on a given page.
+    \item Find the standard deviation of the number of errors on a given page.
+  \end{enumerate}
+  \newpage
+  \item The grade point averages (GPAs) of a large population of college students are approximately normally distributed with mean 2.4 and standard deviation 0.8.
+  \begin{enumerate}[label=(\alph*),left=0pt,widest=a,topsep=0ex]
+    \item What fraction of the students will possess a GPA in excess of 4.0?
+    \item If students possessing a GPA less than 1.6 are dropped from college, what percentage of the students will be dropped?
+  \end{enumerate}
+  \newpage
+  \item Assume that you arrive at a bus stop, and the time you have to wait for the bus is uniformly distributed between 5 and 25 minutes.
+  \begin{enumerate}[label=(\alph*),left=0pt,widest=a,topsep=0ex]
+    \item Find the probability that you will have to wait longer than 10 minutes.
+    \item Find the expected number of minutes you will have to wait.
   \end{enumerate}
 \end{enumerate}
 
@@ -85,16 +101,32 @@
   \begin{enumerate*}[label=(\alph*),itemjoin=\tab]
     \item 0.1536
     \item 0.8192
-  \end{enumerate*}
-  \item
-  \begin{enumerate*}[label=(\alph*),itemjoin=\tab]
-    \item 25
-    \item 6
+    \item 3.2
+    \item 0.8
   \end{enumerate*}
   \item
   \begin{enumerate*}[label=(\alph*),itemjoin=\tab]
     \item 0.3679
     \item 0.2642
+    \item 1
+    \item 1
+  \end{enumerate*}
+  \item
+  \begin{enumerate*}[label=(\alph*),itemjoin=\tab]
+    \item 0.0498
+    \item 0.5768
+    \item 3
+    \item 1.732
+  \end{enumerate*}
+  \item
+  \begin{enumerate*}[label=(\alph*),itemjoin=\tab]
+    \item 0.0228
+    \item 0.1587
+  \end{enumerate*}
+  \item
+  \begin{enumerate*}[label=(\alph*),itemjoin=\tab]
+    \item 0.75
+    \item 15
   \end{enumerate*}
 \end{enumerate}
 \end{document}
