--- a/src/math5a.tex
+++ b/src/math5a.tex
@@ -52,25 +52,63 @@
 \begin{document}
 \maketitle
 \medskip
-答案位於第 \pageref{answer} 頁。
-\section{混合題（共 1 題）}
+共有 3 題。答案位於第 \pageref{answer} 頁。
+\section{填充題}
 \begin{enumerate}[label=\arabic*.,align=left,leftmargin=*,labelsep=.3em]
-  \item 設 $k \neq 1$，則 $1 + k + k^2 + \cdots + k^{113}$ 與下列何者相等？（單選）
-  \begin{enumerate}[label=(\Alph*),align=left,leftmargin=*,labelsep=.3em]
-    \item $k^{114}$
-    \item $\fraction{k^{113}-1}{k-1}$
-    \item $\fraction{k^{114}-1}{k-1}$
-    \item $\fraction{k-1}{k^{113}-1}$
-    \item $\fraction{k-1}{k^{114}-1}$
+  \item 桌上有編號 1、2、3、6 的球，我們要將四顆球全部放入甲、乙兩個箱子當中。
+  \begin{enumerate}[label=(\arabic*),align=left,leftmargin=*,labelsep=.3em]
+    \item 共有 $\blank{4em}$ 種放置方法。
+    \item 若要使兩箱中都至少有 1 顆球，會有 $\blank{4em}$ 種放置方法。
+    \item 若要使兩箱中都至少有 1 顆球，且甲、乙兩箱中球編號的乘積相等，會有 $\blank{4em}$ 種放置方法。
+  \end{enumerate}
+  \newpage
+  \item 甲、乙、丙、丁、戊、己共 6 人打算要排成一列拍攝團體照。
+  \begin{enumerate}[label=(\arabic*),align=left,leftmargin=*,labelsep=.3em]
+    \item 共有 $\blank{5em}$ 種排法。
+    \item 若甲、乙要相鄰，且丙、丁也要相鄰，則有 $\blank{5em}$ 種排法。
+    \item 若要甲、乙不相鄰，且丙、丁也不相鄰，則有 $\blank{5em}$ 種排法。
+  \end{enumerate}  
+\end{enumerate}
+
+\newpage
+\section{混合題}
+\begin{enumerate}[label=\arabic*.,align=left,leftmargin=*,labelsep=.3em,start=3]
+  \item 考慮正整數 $N = 10800$。
+  \begin{enumerate}[label=(\arabic*),align=left,leftmargin=*,labelsep=.3em]
+    \item 已知 $N = 2^4 \times 3^3 \times 5^2$。設 $a$、$b$、$c$ 皆為非負整數，則下列何者是「$2^a \times 3^b \times 5^c$ 是 $N$ 的因數」的充分必要條件？（單選）
+    \begin{enumerate}[label=(\Alph*),align=left,leftmargin=*,labelsep=.3em]
+      \item $0 \leq a + b + c \leq 8$
+      \item $0 \leq a + b + c \leq 9$
+      \item $0 \leq a \leq 3$ 且 $0 \leq b \leq 2$ 且 $0 \leq c \leq 1$
+      \item $0 \leq a \leq 4$ 且 $0 \leq b \leq 3$ 且 $0 \leq c \leq 2$
+      \item $1 \leq a \leq 4$ 且 $1 \leq b \leq 3$ 且 $1 \leq c \leq 2$
+    \end{enumerate}
+    \item 共有 $\blank{5em}$ 個正整數是 $N$ 的因數。
   \end{enumerate}
 \end{enumerate}
 
 \newpage
 \label{answer}
 {\bfseries\large 答案 \par}
-\setcounter{section}{0}
-\section{混合題}
+%\setcounter{section}{0}
+%\section{填充題}
 \begin{enumerate}[label=\arabic*.,left=0pt]
-  \item (C)
+  \item
+  \begin{enumerate}[label=(\arabic*),align=left,leftmargin=*,labelsep=.3em]
+    \item 16
+    \item 14
+    \item 4
+  \end{enumerate}
+  \item
+  \begin{enumerate}[label=(\arabic*),align=left,leftmargin=*,labelsep=.3em]
+    \item 720
+    \item 96
+    \item 336
+  \end{enumerate}
+  \item
+  \begin{enumerate}[label=(\arabic*),align=left,leftmargin=*,labelsep=.3em]
+    \item (D)
+    \item 60
+  \end{enumerate}
 \end{enumerate}
 \end{document}
